// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build key should build storage key 1`] = `"test.data"`;

exports[`remove item should remove item 1`] = `Object {}`;

exports[`remove item should remove non-existing item 1`] = `Object {}`;

exports[`set item should add item 1`] = `
Object {
  "test.data": "{\\"hello\\":\\"world\\"}",
}
`;

exports[`set item should add second item 1`] = `
Object {
  "test.data": "{\\"hello\\":\\"world\\"}",
  "test.data-1": "[123]",
}
`;

exports[`set item should override item 1`] = `
Object {
  "test.data": "{\\"data\\":\\"new\\"}",
}
`;
